--- a/template/gallery.html
+++ b/template/gallery.html
@@ -6,12 +6,17 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Gallery Page</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/gallery.css' %}">
 </head>
 <body>
 
 <h1>Our Products</h1>
 <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium alias aliquam blanditiis, consequuntur dolorum fugiat ipsam laboriosam nam obcaecati, porro praesentium qui repellendus soluta temporibus unde vitae voluptatibus? Quibusdam.</span><span>Ab adipisci aliquam autem blanditiis consectetur culpa dolore dolorem dolores, ducimus eius et facere id illum itaque libero mollitia nesciunt nobis non nostrum nulla quae quia, tenetur unde, voluptate voluptatibus.</span><span>Aperiam at distinctio doloremque dolorum eaque earum error, excepturi fugiat impedit inventore magnam molestiae pariatur placeat quidem, repellendus reprehenderit similique tempore. Animi dolore dolorum id molestias quis quo repellat vel.</span><span>Adipisci, architecto deserunt esse impedit laboriosam, laudantium necessitatibus numquam praesentium repellat repellendus sint temporibus tenetur vero. Animi cum distinctio excepturi fugiat illum inventore ipsa mollitia nulla perspiciatis quod sequi, sit?</span></p>
-
+<img src="{% static 'assets/2.jpeg'%}" alt="">
+<img src="{% static 'assets/1.jpeg'%}" alt="">
+<img src="{% static 'assets/4.jpeg'%}" alt="">
+<img src="{% static 'assets/3.jpeg'%}" alt="">
 
 </body>
 </html>
